--- a/Proposal_Revision/myrefs.bib
+++ b/Proposal_Revision/myrefs.bib
@@ -1,4 +1,3 @@
-
 @article{mitra_gesture_2007,
 	title = {Gesture recognition: A survey},
 	volume = {37},
@@ -71,4 +70,13 @@
 	year = {1994},
 	pages = {1747-1752},
 	file = {Snapshot:/Users/permar/Library/Application Support/Firefox/Profiles/uepzkl8i.default/zotero/storage/TDNCSPR7/abs_all.html:text/html}
+},
+
+@article{zheng2002segmentation,
+  title={The segmentation and identification of handwriting in noisy document images},
+  author={Zheng, Y. and Li, H. and Doermann, D.},
+  journal={Document Analysis Systems V},
+  pages={95--105},
+  year={2002},
+  publisher={Springer}
 }
