--- a/Proposal_Revision/myrefs.bib
+++ b/Proposal_Revision/myrefs.bib
@@ -72,11 +72,22 @@
 	file = {Snapshot:/Users/permar/Library/Application Support/Firefox/Profiles/uepzkl8i.default/zotero/storage/TDNCSPR7/abs_all.html:text/html}
 },
 
-@article{zheng2002segmentation,
-  title={The segmentation and identification of handwriting in noisy document images},
-  author={Zheng, Y. and Li, H. and Doermann, D.},
-  journal={Document Analysis Systems V},
-  pages={95--105},
-  year={2002},
-  publisher={Springer}
+@inproceedings{starner1994line,
+  title={On-line cursive handwriting recognition using speech recognition methods},
+  author={Starner, T. and Makhoul, J. and Schwartz, R. and Chou, G.},
+  booktitle={Acoustics, Speech, and Signal Processing, 1994. ICASSP-94., 1994 IEEE International Conference on},
+  pages={V--125},
+  year={1994},
+  organization={IEEE}
+},
+
+@article{hong1998segmentation,
+  title={Segmentation and recognition of continuous handwriting Chinese text},
+  author={Hong, C. and Loudon, G. and Wu, Y. and Zitserman, R.},
+  journal={International journal of pattern recognition and artificial intelligence},
+  volume={12},
+  number={02},
+  pages={223--232},
+  year={1998},
+  publisher={World Scientific}
 }
